# Orientada-a-Objetos

./: .gitignore  Menu  Menu.cpp  README.md
Classes/: main  main.cpp  retangulo.cpp  retangulo.h
Classes/BigInt/: bigint.cpp  bigint.h  main  main.cpp
Classes/Book/: book.cpp  book.h  main  main.cpp
Classes/Complexo/: complexo.cpp  complexo.h  main  main.cpp
Classes/Data/: data.cpp  data.h  main  main.cpp
Classes/Fração/: Fracao.cpp  Fracao.h  complexo.cpp  complexo.h  main  main.cpp
Classes/Phone/: main  main.cpp  phone.cpp
Classes/Point/: main  main.cpp  point.h
Classes/Poligonus/: Poligonus.cpp  main2  main2.cpp  poligonus.h
Classes/Polinômio/: main  main.cpp  polinomio.cpp  polinomio.h
Classes/Political/: main  main.cpp  political.h
Classes/Ponto Cartesiano/: main  main.cpp  ponto.h
Classes/Retângulo/: main.cpp
Classes/Triângulo/: main  main.cpp  triangulo.cpp  triangulo.h
Classes/Vector/: main  main.cpp  vetor.cpp  vetor.h
Códigos Isolados/Básico/: Base.cpp  Binario  Binario.cpp  Cube  Cube.cpp  Factorial  Factorial.cpp  MDC  MDC.cpp  Numeros primos  Numeros primos.cpp  Palindromo  Palindromo.cpp  Retangulo  Retangulo.cpp  Soma  Soma.cpp  Teste Ponteiro  Teste Ponteiro.cpp  exemplo  exemplo]  factorial.h  forca  forca.cpp  recursividade  recursividade.cpp
Códigos Isolados/Final/: Menu
Exceções/Bad Alloc/: Bad alloc  Bad alloc.cpp
Exceções/Example/: Exception example  Exception example.cpp
Exceções/Pilha/: main  main.cpp  pilha.cpp  pilha.h
OpenCV/Teste/: CMakeLists.txt
OpenCV/Teste/src/: deteccao.hpp  opencvtest.cpp
(+41 files in other folders)
